users endpoints building
