# src/Entity/Trait/Timestampable.php
@@ -2,38 +2,43 @@
 
 namespace App\Entity\Trait;
 
+use DateTime;
+use DateTimeInterface;
 use Doctrine\ORM\Mapping as ORM;
+use JMS\Serializer\Annotation as Serializer;
 
 trait Timestampable
 {
     /**
      * @ORM\Column(type="datetime", options={"default": "CURRENT_TIMESTAMP"})
+     * @Serializer\Groups({ "listUser", "showUser" })
      */
-    private ?\DateTimeImmutable $createdAt = null;
+    private ?DateTimeInterface $createdAt = null;
 
     /**
      * @ORM\Column(type="datetime", options={"default": "CURRENT_TIMESTAMP"})
+     * @Serializer\Groups({ "listUser", "showUser" })
      */
-    private ?\DateTimeImmutable $updatedAt = null;
+    private ?DateTimeInterface $updatedAt = null;
 
-    public function getCreatedAt(): ?\DateTimeImmutable
+    public function getCreatedAt(): ?DateTimeInterface
     {
         return $this->createdAt;
     }
 
-    public function setCreatedAt(\DateTimeImmutable $createdAt): self
+    public function setCreatedAt(DateTimeInterface $createdAt): self
     {
         $this->createdAt = $createdAt;
 
         return $this;
     }
 
-    public function getUpdatedAt(): ?\DateTimeImmutable
+    public function getUpdatedAt(): ?DateTimeInterface
     {
         return $this->updatedAt;
     }
 
-    public function setUpdatedAt(\DateTimeImmutable $updatedAt): self
+    public function setUpdatedAt(DateTimeInterface $updatedAt): self
     {
         $this->updatedAt = $updatedAt;
 
@@ -47,8 +52,8 @@ trait Timestampable
     public function updateTimestamps()
     {
         if ($this->getCreatedAt() === null) {
-            $this->setCreatedAt(new \DateTimeImmutable());
+            $this->setCreatedAt(new DateTime());
         }
-        $this->setUpdatedAt(new \DateTimeImmutable());
+        $this->setUpdatedAt(new DateTime());
     }
 }
